# vulkan-object

./: LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  update.py
src/vulkan_object/: __init__.py  apiconventions.py  base_generator.py  cgenerator.py  generator.py  parse_dependency.py  reg.py  stripAPI.py  vkconventions.py
tests/: test_registry.py
